tests/errors/preprocessor/010_branch.c.expect
./tests/errors/preprocessor/010_branch.c:1:3: error: unexpected end-of-file in preprocessor expression
1 | #if
      ^
./tests/errors/preprocessor/010_branch.c:1:3: error: unterminated #if
1 | #if
      ^
